fixed background on mobile nav

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-.xl-shadow {
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
+.bg {
+  background-color: #f9f9f9;
+}
+
+.dark .bg {
+  background-color: #151515;
 }
